--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
         <a href="/" class="nav__link" data-link>Dashboard</a>
         <a href="/posts" class="nav__link" data-link>Posts</a>
         <a href="/settings" class="nav__link" data-link>Settings</a>
+        <a href="/highcharts" class="nav__link" data-link>Highcharts</a>
     </nav>
     <div id="app"></div>
     <script type="module" src="/static/js/index.js"></script>
